# SeaBattle

./: CMakeLists.txt
include/: ComputerIntellect.h  InputController.h  Intellect.h  PresentationController.h  UserIntellect.h
src/: ComputerIntellect.cpp  InputController.cpp  PresentationController.cpp  UserIntellect.cpp  main.cpp
